--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
   },
   "engines": {
     "node": ">=20.12.0"
+  },
+  "resolutions": {
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2"
   }
 }
